--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -52,4 +52,157 @@
     author = {{SymPy Development Team}},
     year = {2014},
     url = {http://www.sympy.org},
+},
+
+@article{chakra-nour,
+    author={Abou Chakra, Claire Nour and Pepin, Jacques and Sirard, Stephanie and Valiquette, Louis},
+    title={Risk Factors for Recurrence, Complications and Mortality in Clostridium difficile Infection: A Systematic Review},
+    volume={9},
+    DOI={10.1371/journal.pone.0098400},
+    number={6},
+    journal={PLoS ONE},
+    year={2014},
+    pages={e98400}
+},
+
+@article{austin-matthew,
+    author={Austin, Matthew and Mellow, Mark and Tierney, William M.},
+    title={Fecal Microbiota Transplantation in the Treatment of Clostridium difficile Infections},
+    volume={127},
+    DOI={10.1016/j.amjmed.2014.02.017},
+    number={6},
+    journal={The American Journal of Medicine},
+    year={2014},
+    pages={479-483}
+},
+
+@article{bakken-johan,
+    author={Bakken, Johan S. and Borody, Thomas and Brandt, Lawrence J. and Brill, Joel V. and Demarco, Daniel C. and Franzos, Marc Alaric and Kelly, Colleen and Khoruts, Alexander and Louie, Thomas and Martinelli, Lawrence P. et al.},
+    title={Treating Clostridium difficile Infection With Fecal Microbiota Transplantation},
+    volume={9},
+    DOI={10.1016/j.cgh.2011.08.014},
+    number={12},
+    journal={Clinical Gastroenterology and Hepatology},
+    year={2011},
+    pages={1044-1049}
+},
+
+@article{chang_krezolek,
+    author={Chang, Heidi T. and Krezolek, Dorota and Johnson, Stuart and Parada, Jorge P. and Evans, Charlesnika T. and Gerding, Dale N.},
+    title={Onset of Symptoms and Time to Diagnosis of Clostridium difficile ñAssociated Disease Following Discharge From an Acute Care Hospital ï},
+    volume={28},
+    DOI={10.1086/519178},
+    number={8},
+    journal={Infect Control Hosp Epidemiol},
+    year={2007},
+    pages={926-931}
+},
+
+@article{clabots_johnson,
+    author={Clabots, C. R. and Johnson, S. and Olson, M. M. and Peterson, L. R. and Gerding, D. N.},
+    title={Acquisition of Clostridium difficile by Hospitalized Patients: Evidence for Colonized New Admissions as a Source of Infection},
+    volume={166},
+    DOI={10.1093/infdis/166.3.561},
+    number={3},
+    journal={Journal of Infectious Diseases},
+    year={1992},
+    pages={561-567}
+},
+
+@article{dubberke_olsen_2012,
+    author={Dubberke, E. R. and Olsen, M. A.},
+    title={Burden of Clostridium difficile on the Healthcare System},
+    volume={55},
+    DOI={10.1093/cid/cis335},
+    number={suppl 2},
+    journal={Clinical Infectious Diseases},
+    year={2012},
+    pages={S88-S92}
+},
+
+@article{hensgens_goorhuis,
+    author={Hensgens, M. P. M. and Goorhuis, A. and Dekkers, O. M. and Kuijper, E. J.},
+    title={Time interval of increased risk for Clostridium difficile infection after exposure to antibiotics},
+    volume={67},
+    DOI={10.1093/jac/dkr508},
+    number={3},
+    journal={Journal of Antimicrobial Chemotherapy},
+    year={2011},
+    pages={742-748}
+},
+
+@article{lessa_mu,
+    author={Lessa, Fernanda C. and Mu, Yi and Bamberg, Wendy M. and Beldavs, Zintars G. and Dumyati, Ghinwa K. and Dunn, John R. and Farley, Monica M. and Holzbauer, Stacy M. and Meek, James I. and Phipps, Erin C. et al.},
+    title={Burden of Clostridium difficile Infection in the United States},
+    volume={372},
+    DOI={10.1056/nejmoa1408913},
+    number={9},
+    journal={New England Journal of Medicine},
+    year={2015},
+    pages={825-834}
+},
+
+@article{magill_edwards,
+    author={Magill, Shelley S. and Edwards, Jonathan R. and Bamberg, Wendy and Beldavs, Zintars G. and Dumyati, Ghinwa and Kainer, Marion A. and Lynfield, Ruth and Maloney, Meghan and McAllister-Hollod, Laura and Nadle, Joelle et al.},
+    title={Multistate Point-Prevalence Survey of Health CareñAssociated Infections},
+    volume={370},
+    DOI={10.1056/nejmoa1306801},
+    number={13},
+    journal={New England Journal of Medicine},
+    year={2014},
+    pages={1198-1208}
+},
+
+@article{miller_chen,
+    author={Miller, Becky A. and Chen, Luke F. and Sexton, Daniel J. and Anderson, Deverick J.},
+    title={Comparison of the Burdens of Hospital-Onset, Healthcare FacilityñAssociated Clostridium difficile Infection and of Healthcare-Associated Infection due to Methicillin-Resistant Staphylococcus aureus in Community Hospitals},
+    volume={32},
+    DOI={10.1086/659156},
+    number={4},
+    journal={Infection Control and Hospital Epidemiology},
+    year={2011},
+    pages={387-390}
+},
+
+@article{rafii_sutherland,
+    author={Rafii, F. and Sutherland, J.B. and Cerniglia, C.E.},
+    title={Effects of treatment with antimicrobial agents on the human colonic microflora},
+    volume={4},
+    number={6},
+    journal={Ther Clin Risk Manag},
+    year={2008},
+    pages={1343-1358}
+},
+
+@article{seekatz_aas,
+    author={Seekatz, A. M. and Aas, J. and Gessert, C. E. and Rubin, T. A. and Saman, D. M. and Bakken, J. S. and Young, V. B.},
+    title={Recovery of the Gut Microbiome following Fecal Microbiota Transplantation},
+    volume={5},
+    DOI={10.1128/mbio.00893-14},
+    number={3},
+    journal={mBio},
+    year={2014},
+    pages={e00893-14-e00893-14}
+},
+
+@article{thomas,
+    author={Thomas, C.},
+    title={Antibiotics and hospital-acquired Clostridium difficile-associated diarrhoea: a systematic review},
+    volume={51},
+    DOI={10.1093/jac/dkg254},
+    number={6},
+    journal={Journal of Antimicrobial Chemotherapy},
+    year={2003},
+    pages={1339-1350}
+},
+
+@article{wilcox,
+    author={Wilcox, Mark H and Fawley, Warren N},
+    title={Hospital disinfectants and spore formation by Clostridium difficile},
+    volume={356},
+    DOI={10.1016/s0140-6736(00)02819-1},
+    number={9238},
+    journal={The Lancet},
+    year={2000},
+    pages={1324}
 }
