--- a/doc/project.Rmd
+++ b/doc/project.Rmd
@@ -22,7 +22,8 @@ header-includes:
 
 ```{r chunks, echo=FALSE}
 knitr::opts_chunk$set(echo=FALSE,
-                      message=FALSE)
+                      message=FALSE,
+                      eval=FALSE)
 ```
 
 ```{r libs}
@@ -273,27 +274,27 @@ $$
 
 **Table 1: Deterministic Model Parameters**
 
-  ------------ ----------------------------------------------------------------------------------------- -------------------- ------------------------------------------------- ---------------------------------------------------------------------------------------------------------------
-  **Symbol**   **Description (Units)**                                                                   **Point Estimate**   **Range Employed in Sensitivity Analysis**        **Source**
-  *a~r~*       Proportion of resistant admitted patients                                                 0.75                 --                                                Lanzas Data
-  *a~s~*       Proportion of susceptible-following-antibiotic-therapy (S~a~) admitted patients           0.22                 --                                                Lanzas Estimate (Data-derived)
-  *a~c~*       Proportion of colonized admitted patients                                                 0.01                 --                                                Lanzas Estimate (Data-derived)
-  *a~d~*       Proportion of diseased admitted patients                                                  0.01                 --                                                Lanzas Data
-  $\alpha$            Antibiotic prescription rate (1/days)                                                     0.5                  --                                                Lanzas Data
-  $\theta_a$         Restoration rate of colonization resistance following antibiotic treatment (1/days)       0.033                --                                                Lanzas Estimate
-  $\beta_c, \beta_d$   Transmission coefficient of infectious (colonized or diseased) patients (1/(ind\*days))   0.007                --                                                Lanzas Estimate (Rafii, Sutherland et al. 2008)
-  psi            Proportion of diseased patients that receive fecal transplant                             0.20                 0.00 – 1.0 (values of 0.00, 0.50, and 1.0)        New Estimate (Abou Chakra, Pepin et al. 2014)
-  $\epsilon_a$         Antibiotic treatment rate (1/days duration)                                               0.10                 --                                                Lanzas Estimate (McFarland 2008)
-  p~a~         Probability of successful antibiotic treatment                                            0.80                 --                                                Lanzas Estimate (McFarland 2008)
-  $\epsilon_f$         Fecal transplant treatment rate (1/days duration)                                         1.0                  0.25 – 2.0 (values of 0.25, 0.50, 1.5, and 2.0)   New Estimate (Austin, Mellow et al. 2014)
-  p~f~         Probability of successful fecal transplant treatment                                      0.90                 0.50 – 1.0 (values of 0.50 and 1.0)               New Estimate (Austin, Mellow et al. 2014)
-  $\theta_f$         Restoration rate of colonization resistance following fecal transplant (1/days)           1.0                  0.063 – 2.0 (values of 0.063, 1.5, and 2.0)       <span id="h.gjdgxs" class="anchor"></span>New Estimate (Bakken, Borody et al. 2011, Seekatz, Aas et al. 2014)
-  phi            Clinical disease rate at which colonized patients progress to infection (1/days)          0.04                 --                                                Lanzas Estimate (Clabots, Johnson et al. 1992) (Chang, Krezolek et al. 2007)
-  *k~r~*       Discharge rate for resistant patients (1/days)                                            0.33                 --                                                Lanzas Data
-  *k*          Discharge rate for susceptible and colonized patients (1/days)                            0.15                 --                                                Lanzas Data
-  *k~d~*       Discharge rate for diseased patients (1/day)                                              0.068                --                                                Lanzas Data
-  ------------ ----------------------------------------------------------------------------------------- -------------------- ------------------------------------------------- ---------------------------------------------------------------------------------------------------------------
-
+\begin{tabular}{|p{1cm}|p{5.5cm}|p{2.5cm}|p{3cm}|p{3cm}|}
+\hline
+Symbol       & Description (Units)                                                                     & Point Estimate & Range Employed in Sensitivity Analysis          & Source                                                                       \\ \hline
+ar           & Proportion of resistant admitted patients                                               & 0.75           & --                                              & Lanzas Data                                                                  \\ \hline
+as           & Proportion of susceptible-following-antibiotic-therapy (Sa) admitted patients           & 0.22           & --                                              & Lanzas Estimate (Data-derived)                                               \\ \hline
+ac           & Proportion of colonized admitted patients                                               & 0.01           & --                                              & Lanzas Estimate (Data-derived)                                               \\ \hline
+ad           & Proportion of diseased admitted patients                                                & 0.01           & --                                              & Lanzas Data                                                                  \\ \hline
+$\alpha$        & Antibiotic prescription rate (1/days)                                                   & 0.5            & --                                              & Lanzas Data                                                                  \\ \hline
+$\theta$        & Restoration rate of colonization resistance following antibiotic treatment (1/days)     & 0.033          & --                                              & Lanzas Estimate                                                              \\ \hline
+$\beta_c, \beta_d$ & Transmission coefficient of infectious (colonized or diseased) patients (1/(ind\*days)) & 0.007          & --                                              & Lanzas Estimate (Rafii, Sutherland et al. 2008)                              \\ \hline
+$\psi$          & Proportion of diseased patients that receive fecal transplant                           & 0.20           & 0.00 – 1.0 (values of 0.00, 0.50, and 1.0)      & New Estimate (Abou Chakra, Pepin et al. 2014)                                \\ \hline
+$\epsilon_a$     & Antibiotic treatment rate (1/days duration)                                             & 0.10           & --                                              & Lanzas Estimate (McFarland 2008)                                             \\ \hline
+pa           & Probability of successful antibiotic treatment                                          & 0.80           & --                                              & Lanzas Estimate (McFarland 2008)                                             \\ \hline
+$\epsilon_f$     & Fecal transplant treatment rate (1/days duration)                                       & 1.0            & 0.25 – 2.0 (values of 0.25, 0.50, 1.5, and 2.0) & New Estimate (Austin, Mellow et al. 2014)                                    \\ \hline
+pf           & Probability of successful fecal transplant treatment                                    & 0.90           & 0.50 – 1.0 (values of 0.50 and 1.0)             & New Estimate (Austin, Mellow et al. 2014)                                    \\ \hline
+$\theta_f$       & Restoration rate of colonization resistance following fecal transplant (1/days)         & 1.0            & -- & New Estimate (Bakken, Borody et al. 2011, Seekatz, Aas et al. 2014)          \\ \hline
+$\phi$          & Clinical disease rate at which colonized patients progress to infection (1/days)        & 0.04           & --                                              & Lanzas Estimate (Clabots, Johnson et al. 1992) (Chang, Krezolek et al. 2007) \\ \hline
+kr           & Discharge rate for resistant patients (1/days)                                          & 0.33           & --                                              & Lanzas Data                                                                  \\ \hline
+k            & Discharge rate for susceptible and colonized patients (1/days)                          & 0.15           & --                                              & Lanzas Data                                                                  \\ \hline
+kd           & Discharge rate for diseased patients (1/day)                                            & 0.068          & --                                              & Lanzas Data                                                                  \\ \hline
+\end{tabular}
 
 # Results
 ## Comparison of Baseline Differential Equations
@@ -374,7 +375,7 @@ param["psi"] <- psi.old
 
 ## Simulation
 ```{r simulation-lanzas}
-simulations <- 1e3
+simulations <- 2e1
 
 param <- c(a.r=a.r, a.s=a.s, a.cn=a.cn, a.cp=a.cp, a.d=a.d, alpha=alpha,
            theta=theta, beta.c=beta.c, beta.d=beta.d, f=f, 
